# fuzzy

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  search_item.rs
src/score/: config.rs  mod.rs
src/search/: mod.rs
