[package]
name         = "fzyr"
version      = "0.3.0"
authors      = ["jmaargh <https://github.com/jmaargh>"]
categories   = ["algorithms", "command-line-utilities"]
keywords     = ["fuzzy", "finder", "find", "search"]
license-file = "LICENSE"
edition      = "2021"

[dependencies]
ndarray   = "0.15.6"
bit-vec   = "0.6.3"
